[Java 17] Update src/main/java/com/example/java8/stream/ParallelStreamProcessor.java from Jira ticket JAVA-122
- Timestamp: 2024-12-05 16:23:00
- Source: Jira code review
- Ticket: JAVA-122
- File: src/main/java/com/example/java8/stream/ParallelStreamProcessor.java
- Branch: testing
- Type: Java 17 conversion